--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
     "font-awesome": "^4.7.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.6.3",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.3",
     "sass": "^1.89.0",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
